--- a/WebContent/WEB-INF/view/index.html
+++ b/WebContent/WEB-INF/view/index.html
@@ -9,17 +9,23 @@
 </head>
 <body>
 	<H1>Välkommen till Employee Register</H1>
-	<a th:href="@{/New}">try</a>
-
+	<br></br>
+	<a th:href="@{/add}">addEmployee</a>
+	<a th:href="New">new</a>
+<br></br>
 	<FORM th:action="index">
 		<input type="submit" value="Show all employee" />
 	</FORM>
-
+<br></br>
 	<FORM th:action="getEmployee">
 		<INPUT name="id"></INPUT> 
 		<input type="submit" value="Show one employee" />
 	</FORM>
-
+	<br></br>
+	<FORM th:action="add">
+		<input type="submit" value="Add new employee" />
+	</FORM>
+<br></br>
 
 	<table border="1">
 		<THEAD>
@@ -30,6 +36,8 @@
 				<TD>Location</TD>
 				<TD>Role</TD>
 				<TD>Registration date</TD>
+				<TD width="60">Edit</TD>
+				<TD width="60">Delete</TD>
 			</TR>
 		</THEAD>
 		<tr th:each="employee : ${employees}">
@@ -39,8 +47,11 @@
 			<td th:text="${employee.location}">Location</td>
 			<td th:text="${employee.role}">Role</td>
 			<td th:text="${employee.registration_date}">Registration date</td>
+			<td><a th:href="@{/edit/{id}(id = ${employee.id})}">Edit</a></td>
+			<td><a th:href="@{/delete/{id}(id = ${employee.id})}">Delete</a></td>
 		</tr>
 	</table>
+	<br></br>
 
 
 
