loggedin and filter

--- a/WebContent/WEB-INF/view/index.html
+++ b/WebContent/WEB-INF/view/index.html
@@ -11,16 +11,26 @@
 <body>
 	<div>
 		<form th:action="@{/admin}" th:unless="${session.isSignedIn}" th:object="${user}" method="POST" >
-			<label>Username: </label><input name="userName"></input><br /> 
-			<label>Password:</label><input type="password" name="password"></input> 
+			<label>Username: </label><input name="username" th:field="*{username}"></input><br /> 
+			<label>Password:</label><input type="password" name="password" th:field="*{password}"></input> 
 			<input type="submit" value="Sign In"></input> 
+			 <ul>
+			 	 <li th:each="err : ${#fields.errors('all')}" th:text="${err}" />
+			 	 <li th:if="${#fields.hasErrors('username')}" th:errors="*{username}" />
+			 </ul>
+			 <ul>
+			 	 <li th:errors="*{username}" />
+			 </ul>
+			 <div th:field="error"></div>
 		</form>
 		
 		<form th:if="${session.isSignedIn}" th:action="@{/signOut}">
 			<input type="submit" value="Sign Out"></input>
 		</form>
 	</div>
-
+	<br />
+	
+	
 	<br />
 	<div th:if="${session.isSignedIn}">
 
@@ -35,18 +45,14 @@
 
 		<form action="#" th:action="@{/employee/add}" th:object="${employee}" method="POST">
 			<div th:if="${employee != null}">
-				<label>ID: </label> <input name="id" type="hidden"
-					th:value="${employee?.id}" /> <input name="registrationDate"
-					type="hidden" th:value="${employee.registrationDate}" /> <input
-					th:value="${employee?.id}" readonly="readonly" disabled="disabled"
-					size="1" />
+				<label>ID: </label> <input name="id" type="hidden" th:value="${employee?.id}" /> 
+				<input name="registrationDate" type="hidden" th:value="${employee.registrationDate}" /> 
+				<input th:value="${employee?.id}" readonly="readonly" disabled="disabled" size="1" />
 			</div>
-			<label>Firstname: </label><input name="firstname"
-				th:value="${employee?.firstname}"></input> <br></br> <label>Lastname:
-			</label><input name="lastname" th:value="${employee?.lastname}"></input> <br></br>
-			<label>Location: </label><input name="location"
-				th:value="${employee?.location}"></input> <br></br> <label>Role:
-			</label><input name="role" th:value="${employee?.role}"></input>
+			<label>Firstname: </label><input name="firstname" th:value="${employee?.firstname}"></input> <br /> 
+			<label>Lastname: </label><input name="lastname" th:value="${employee?.lastname}"></input> <br />
+			<label>Location: </label><input name="location" th:value="${employee?.location}"></input> <br/> 
+			<label>Role:</label><input name="role" th:value="${employee?.role}"></input>
 			<th:block>
 				<div th:if="${employee != null}">
 					<input type="submit" value="Edit employee"></input>
@@ -58,8 +64,7 @@
 		</form>
 		<br></br>
 		<form th:action="getEmployee">
-			Find Employee (By ID): <input name="id"></input> <input type="submit"
-				value="Search" />
+			Find Employee (By ID): <input name="id"></input> <input type="submit" value="Search" />
 		</form>
 		<br></br>
 		<table border="1">
@@ -88,10 +93,8 @@
 		</table>
 		<br></br>
 
-
 	</div>
 	<br />
-
 
 </body>
 </html>
